package sample;

public interface DataStoreInterface {
    String getUserList();
}
